// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`grammar > simple fields > primitives 1`] = `
"{
  "$type": "FormMLSchema",
  "form": {
    "$type": "Form",
    "name": "ExampleForm",
    "fields": [
      {
        "$type": "Field",
        "type": "num",
        "name": "numberField",
        "annotations": []
      },
      {
        "$type": "Field",
        "type": "decimal",
        "name": "decimalField",
        "annotations": []
      },
      {
        "$type": "Field",
        "type": "text",
        "name": "textField",
        "annotations": []
      },
      {
        "$type": "Field",
        "type": "bool",
        "name": "boolField",
        "annotations": []
      },
      {
        "$type": "Field",
        "type": "datetime",
        "name": "datetimeField",
        "annotations": []
      }
    ]
  }
}"
`;

exports[`grammar > syntax > comments 1`] = `
"{
  "$type": "FormMLSchema",
  "form": {
    "$type": "Form",
    "name": "Example",
    "fields": [
      {
        "$type": "Field",
        "type": "num",
        "name": "numberField",
        "annotations": []
      }
    ]
  }
}"
`;

exports[`grammar > validation annotations > annotation with arguments > argument type > JS-like literals > string - "'single quotes'" 1`] = `
"{
  "$type": "FormMLSchema",
  "form": {
    "$type": "Form",
    "name": "ExampleForm",
    "fields": [
      {
        "$type": "Field",
        "annotations": [
          {
            "$type": "Annotation",
            "name": "any",
            "args": [
              {
                "$type": "SQString",
                "value": "'single quotes'"
              }
            ]
          }
        ],
        "type": "num",
        "name": "numberField"
      }
    ]
  }
}"
`;

exports[`grammar > validation annotations > annotation with arguments > argument type > JS-like literals > string - "\\"double quotes\\"" 1`] = `
"{
  "$type": "FormMLSchema",
  "form": {
    "$type": "Form",
    "name": "ExampleForm",
    "fields": [
      {
        "$type": "Field",
        "annotations": [
          {
            "$type": "Annotation",
            "name": "any",
            "args": [
              {
                "$type": "DQString",
                "value": "\\"double quotes\\""
              }
            ]
          }
        ],
        "type": "num",
        "name": "numberField"
      }
    ]
  }
}"
`;

exports[`grammar > validation annotations > annotation with arguments > one argument 1`] = `
"{
  "$type": "FormMLSchema",
  "form": {
    "$type": "Form",
    "name": "ExampleForm",
    "fields": [
      {
        "$type": "Field",
        "annotations": [
          {
            "$type": "Annotation",
            "name": "min",
            "args": [
              {
                "$type": "Number_",
                "value": 10
              }
            ]
          }
        ],
        "type": "num",
        "name": "numberField"
      }
    ]
  }
}"
`;

exports[`grammar > validation annotations > non-argument annotation > annotation with parentheses 1`] = `
"{
  "$type": "FormMLSchema",
  "form": {
    "$type": "Form",
    "name": "ExampleForm",
    "fields": [
      {
        "$type": "Field",
        "annotations": [
          {
            "$type": "Annotation",
            "name": "required",
            "args": []
          }
        ],
        "type": "num",
        "name": "numberField"
      }
    ]
  }
}"
`;

exports[`grammar > validation annotations > non-argument annotation > multiple annotations 1`] = `
"{
  "$type": "FormMLSchema",
  "form": {
    "$type": "Form",
    "name": "ExampleForm",
    "fields": [
      {
        "$type": "Field",
        "annotations": [
          {
            "$type": "Annotation",
            "name": "required1",
            "args": []
          },
          {
            "$type": "Annotation",
            "name": "required2",
            "args": []
          }
        ],
        "type": "num",
        "name": "numberField"
      }
    ]
  }
}"
`;

exports[`grammar > validation annotations > non-argument annotation > multiple lines 1`] = `
"{
  "$type": "FormMLSchema",
  "form": {
    "$type": "Form",
    "name": "ExampleForm",
    "fields": [
      {
        "$type": "Field",
        "annotations": [
          {
            "$type": "Annotation",
            "name": "required",
            "args": []
          }
        ],
        "type": "num",
        "name": "numberField"
      }
    ]
  }
}"
`;

exports[`grammar > validation annotations > non-argument annotation > one line 1`] = `
"{
  "$type": "FormMLSchema",
  "form": {
    "$type": "Form",
    "name": "ExampleForm",
    "fields": [
      {
        "$type": "Field",
        "annotations": [
          {
            "$type": "Annotation",
            "name": "required",
            "args": []
          }
        ],
        "type": "num",
        "name": "numberField"
      }
    ]
  }
}"
`;
